# data-workspaces-core

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-tests-on-push.yml
dataworkspaces/: __init__.py  __main__.py  api.py  dws.py  errors.py  lineage.py  workspace.py
dataworkspaces/backends/: git.py
dataworkspaces/commands/: actions.py  add.py  clone.py  config.py  delete_snapshot.py  deploy.py  diff.py  init.py  lineage.py  params.py  publish.py  pull.py  push.py  report.py  resource.py  restore.py  run.py  snapshot.py  status.py
dataworkspaces/git_backend/: workspace.py
dataworkspaces/kits/: jupyter.py  scikit_learn.py  (+4 more)
docs/: commands.rst  conf.py  index.rst  internals.rst  intro.rst  kits.rst  lineage.rst  requirements.txt  resources.rst  tutorial.rst
tests/: .gitignore  Makefile  README.rst  data.csv  data.json  dws-test-environment.yml  lineage_params_step.py  lineage_step1.py  lineage_step2.py  test_alternative_branch.py  test_api.py  test_export.py  test_file_utils.py  test_git_fat_integration.py  test_git_lfs.py  test_git_utils.py  test_hashtree.py  test_import.py  test_jupyter_kit.ipynb  test_jupyter_kit.py  test_lineage.py  test_lineage_utils.py  test_local_files_resource.py  test_move_results.py  test_push_pull.py  test_rclone.py  test_s3_resource.py  test_scratch_dir.py  test_sklearn_kit.py  test_snapshots.py  test_tensorflow.py  test_wrapper_utils.py  testcli.sh  tf_subclassing.py  transform_data1.py  transform_data2.py  utils_for_tests.py
(+35 files in other folders)
