[metadata]
name = dataworkspaces
version = attr: dataworkspaces.__version__
author = Max Plack Institute for Software Systems, Benedat LLC
author_email = jeff.fischer@benedat.com
description = Easy management of source data, intermediate data, and results for data science projects
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/data-workspaces/data-workspaces-core
classifiers =
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: Software Development :: Version Control
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
    click
    requests

[options.extras_require]
s3 = boto3; s3fs
docker = chardet; dws-repo2docker

[options.entry_points]
console_scripts =
    dws = dataworkspaces.__main__:main
    git-fat = dataworkspaces.third_party.git_fat:main
